--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.1.3",
     "@angular/platform-browser-dynamic": "^14.1.3",
     "@angular/router": "^14.1.3",
+    "bootstrap": "^5.2.0",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
