--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/compiler-cli": "^14.1.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "angular-in-memory-web-api": "^0.14.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
